--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/KickoffLogo.png",
+      "src": "/KickOffLogoPNG.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/KickoffLogo.png",
+      "src": "/KickOffLogoPNG.png",
       "sizes": "512x512",
       "type": "image/png"
     }
